sets dwh as a new db instead of simply a new schema

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DB_CONN_STRING=postgres://postgres:postgres@localhost:5400/postgres
+DWH_DBNAME=dwh
+RAW_DATA_DBNAME=postgres
 MIGRATIONS_PATH=./migrations
 USERS_DATA_PATH=./data/users.json
 LOG_LEVEL=debug
